fix nav section over growing by adding value of 0 on flex-grow on its container, and contact section collapsing adding value of zero on flex-shrink on contact-body

--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ h1 {
     min-width: 300px;
 }
 
+.top-nav {
+    display: flex;
+    justify-content: center;
+}
+.container {
+    flex: 0 1 auto;
+}
+
 .left-banner p {
     font-size: 16px;
     font-weight: 300;
@@ -47,7 +55,6 @@ h1 {
     justify-content: center;
     gap: 20px;
     margin-bottom: 100px;
-    /* border: 1px #fb8500 solid; */
 }
 
 .top-nav-main-left {
@@ -213,7 +220,9 @@ h2 {
     margin: 96px 700px;
     padding: 48px 64px;
     border-radius: 10px;
-    flex: 1;
+    flex-shrink: 0;
+    /* gap: 32px; */
+    width: 1000px;
 }
 
 .contact-header {
